--- a/NoteWorthy.csproj
+++ b/NoteWorthy.csproj
@@ -5,7 +5,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <PublishAot>true</PublishAot>
+    <PublishAot>True</PublishAot>
     <InvariantGlobalization>true</InvariantGlobalization>
     <StartupObject>NoteWorthy.Program</StartupObject>
     <ApplicationIcon>noteworthy.ico</ApplicationIcon>
