--- a/NoteWorthy.csproj
+++ b/NoteWorthy.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="DotNetEnv" Version="3.1.1" />
     <PackageReference Include="Spectre.Console" Version="0.49.1" />
     <PackageReference Include="TextCopy" Version="6.2.1" />
   </ItemGroup>
